--- a/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
+++ b/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
@@ -61,75 +61,77 @@
                             <div></div>
                             <div
                                 class="hidden md:block"
-                                [mat-sort-header]="'sku'"
+                                [mat-sort-header]="'buildingName'"
                             >
-                                SKU
+                                BuildingName
                             </div>
-                            <div [mat-sort-header]="'name'">Name</div>
+                            <div [mat-sort-header]="'buildingNo'">
+                                Building No
+                            </div>
                             <div
                                 class="hidden sm:block"
-                                [mat-sort-header]="'price'"
+                                [mat-sort-header]="'construction_Cost'"
                             >
-                                Price
+                                construction Cost
                             </div>
                             <div
                                 class="hidden lg:block"
-                                [mat-sort-header]="'stock'"
+                                [mat-sort-header]="'contractor'"
                             >
-                                Stock
+                                Contractor
                             </div>
-                            <div
+                            <!-- <div
                                 class="hidden lg:block"
                                 [mat-sort-header]="'active'"
                             >
                                 Active
-                            </div>
-                            <div class="hidden sm:block">Details</div>
+                            </div> -->
+                            <!-- <div class="hidden sm:block">Details</div> -->
                         </div>
                         <!-- Rows -->
-                        <ng-container
-                            *ngIf="
-                                allBuldingConfigData
-                                    | async as allBuldingConfigData
-                            "
-                        >
+                        <ng-container *ngIf="products$ | async as products">
                             <ng-container
-                                *ngFor="
-                                    let product of allBuldingConfigData;
-                                    trackBy: trackByFn
-                                "
+                                *ngFor="let product of data; trackBy: trackByFn"
                             >
-                                <div *ngFor="let i of data">
+                                <div
+                                    class="inventory-grid grid items-center gap-4 py-3 px-6 md:px-8 border-b"
+                                >
                                     <!-- Image -->
-                                    <!-- <div class="flex items-center">
-                                        <div class="relative flex flex-0 items-center justify-center w-12 h-12 mr-6 rounded overflow-hidden border">
-                                            <img
+                                    <div class="flex items-center">
+                                        <div
+                                            class="relative flex flex-0 items-center justify-center w-12 h-12 mr-6 rounded overflow-hidden border"
+                                        >
+                                            <!-- <img
                                                 class="w-8"
                                                 *ngIf="product.thumbnail"
-                                                [alt]="'Product thumbnail image'"
-                                                [src]="product.thumbnail">
-                                            <div
+                                                [alt]="
+                                                    'Product thumbnail image'
+                                                "
+                                                [src]="product.thumbnail"
+                                            /> -->
+                                            <!-- <div
                                                 class="flex items-center justify-center w-full h-full text-xs font-semibold leading-none text-center uppercase"
-                                                *ngIf="!product.thumbnail">
+                                                *ngIf="!product.thumbnail"
+                                            >
                                                 NO THUMB
-                                            </div>
+                                            </div> -->
                                         </div>
-                                    </div> -->
+                                    </div>
 
                                     <!-- SKU -->
                                     <div class="hidden md:block truncate">
-                                        {{ i }}
+                                        {{ product.buildingName }}
                                     </div>
 
                                     <!-- Name -->
                                     <div class="truncate">
-                                        {{ product.name }}
+                                        {{ product.buildingNo }}
                                     </div>
 
                                     <!-- Price -->
                                     <div class="hidden sm:block">
                                         {{
-                                            product.price
+                                            product.construction_Cost
                                                 | currency
                                                     : "USD"
                                                     : "symbol"
@@ -140,7 +142,7 @@
                                     <!-- Stock -->
                                     <div class="hidden lg:flex items-center">
                                         <div class="min-w-4">
-                                            {{ product.stock }}
+                                            {{ product.contractor }}
                                         </div>
                                         <!-- Low stock -->
                                         <div
@@ -175,7 +177,7 @@
                                     </div>
 
                                     <!-- Active -->
-                                    <div class="hidden lg:block">
+                                    <!-- <div class="hidden lg:block">
                                         <ng-container *ngIf="product.active">
                                             <mat-icon
                                                 class="text-green-400 icon-size-5"
@@ -183,21 +185,23 @@
                                                     'heroicons_solid:check'
                                                 "
                                             ></mat-icon>
-                                        </ng-container>
-                                        <ng-container *ngIf="!product.active">
+                                        </ng-container> -->
+                                    <!-- <ng-container *ngIf="!product.active">
                                             <mat-icon
                                                 class="text-gray-400 icon-size-5"
                                                 [svgIcon]="'heroicons_solid:x'"
                                             ></mat-icon>
-                                        </ng-container>
-                                    </div>
+                                        </ng-container> -->
+                                    <!-- </div> -->
 
                                     <!-- Details button -->
                                     <div>
                                         <button
                                             class="min-w-10 min-h-7 h-7 px-2 leading-6"
                                             mat-stroked-button
-                                            (click)="toggleDetails(product.id)"
+                                            (click)="
+                                                toggleDetails(product.uniqueId)
+                                            "
                                         >
                                             <mat-icon
                                                 class="icon-size-5"
