second Wing Dropdown form send

--- a/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
+++ b/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
@@ -324,6 +324,7 @@
                                     [placeholder]="'custom placeholder'"
                                     [settings]="dropdownSettings"
                                     [data]="dropdownList2"
+                                    (onSelect)="onItemSelect2($event)"
                                 >
                                 </ng-multiselect-dropdown>
                                 <mat-form-field class="w-full">
